syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.atlas.framework.grpc.protobuf.aggregator";

import "google/protobuf/empty.proto";

package aggregator;

service OrderService {
  rpc GetOrder (GetOrderRequestProto) returns (OrderProto) {};
}

message OrderProto {
  int32 id = 1;
  CustomerProto customer = 2;
  double amount = 3;
  string status = 4;
  repeated OrderItemProto order_item = 5;
  string created_at = 6;
}

message CustomerProto {
  int32 id = 1;
  string username = 2;
  string email = 3;
}

message OrderItemProto {
  int32 product_id = 1;
  string product_name = 2;
  double product_price = 3;
  string product_status = 4;
  int32 quantity = 5;
}

message GetOrderRequestProto {
  int32 id = 1;
}
